fixs z-index top menu

--- a/src/stylus/blocks/header.styl
+++ b/src/stylus/blocks/header.styl
@@ -21,7 +21,7 @@
     top 0
     left 0
     width 100%
-    z-index: 3
+    z-index: 100
     transition: .5s
   &__contacts
     text-align center
